syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.devh.boot.grpc.examples.lib";
option java_outer_classname = "RedisOperateService";

package learn.tonic.redis.sdk.proto;

// Service definition for Subscribe and Publish
service RedisOperateService {


  // RPC service for subscribing to a channel. This is a streaming RPC, where the server sends messages to the client.
  rpc Subscribe(SubscribeRequest) returns (stream Message);

  // RPC service for publishing a message to a channel.
  rpc Publish(PublishRequest) returns (PublishResponse);

  // Optional: RPC service for unsubscribing from a channel
  // rpc Unsubscribe(UnsubscribeRequest) returns (UnsubscribeResponse);
}


// Message representing a data published in a channel
message Message {
  string channel = 1;
  string data = 2;
}

// Request to subscribe to a specific channel
message SubscribeRequest {
  string channel = 1;
}

// Request to publish data to a channel
message PublishRequest {
  string channel = 1;
  string data = 2;
}

message PublishResponse {
  bool success = 1;
}
